# RayTracer

./: Cargo.toml  plan.txt  shell.nix
src/: camera.rs  fps_counter.rs  gui_app.rs  main.rs  ray_tracing_kernel.wgsl  renderer.rs  scene.rs  screen_shader.wgsl  sphere.rs  state.rs  vertex.rs
